<resources>
    <string name="app_name">recurlylib</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="region">Region</string>
    <string name="street">Street</string>
    <string name="postalCode">Postal Code</string>
    <string name="please_enter_your_address">Please enter your address:</string>
    <string name="continue_txt">Continue</string>
    <string name="please_enter_your_card_info">Please enter your card info:</string>
    <string name="subscribe">Subscribe</string>
    <string name="congrats">Thank you for subscribing!</string>
    <string name="title">Title:</string>
    <string name="ends_at">Ends at:</string>
    <string name="starts_at">Starts at:</string>
    <string name="status">Status:</string>
    <string name="ok">OK</string>
</resources>
