<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/details_border"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <com.route4me.recurlylib.views.BaseTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/primaryDark"
            android:textSize="15sp" />

        <com.route4me.recurlylib.views.BaseTextView
            android:id="@+id/title"
            android:gravity="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColor="@color/purple"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <com.route4me.recurlylib.views.BaseTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/starts_at"
            android:textColor="@color/primaryDark"
            android:textSize="15sp" />

        <com.route4me.recurlylib.views.BaseTextView
            android:id="@+id/startDate"
            android:gravity="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColor="@color/purple"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <com.route4me.recurlylib.views.BaseTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ends_at"
            android:textColor="@color/primaryDark"
            android:textSize="15sp" />

        <com.route4me.recurlylib.views.BaseTextView
            android:id="@+id/endDate"
            android:gravity="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColor="@color/purple"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <com.route4me.recurlylib.views.BaseTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textColor="@color/primaryDark"
            android:textSize="15sp" />

        <com.route4me.recurlylib.views.BaseTextView
            android:id="@+id/status"
            android:gravity="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColor="@color/lightGreen"
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>